@@ -1,3 +1,8 @@
+2003-11-05	ujwal
+
+    * Fixed resizing problems when toolbar visibility is toggled by overriding 
+      behavior of toolbar button.
+
 2003-11-04	fabian
     
     * Checking in the new icon
